# meta-are

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  example.env  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-benchmark.md  bug-python-api.md  bug-ui.md  documentation.md  feature.md
.github/actions/npm-install-with-retry/: action.yml
.github/actions/setup-python-uv/: action.yml
.github/codeql/: codeql-config.yml
.github/workflows/: codeql.yml  deploy-site.yaml  on_push_doc.yaml  on_push_py.yaml  on_push_ts.yaml  test-deploy-site.yaml
are/: __init__.py
are/simulation/: CONCEPTS.md  __init__.py  benchmark.py  config.py  dataset_helpers.py  environment.py  exceptions.py  logging_config.py  main.py  multi_scenario_runner.py  notification_system.py  priority_queue.py  replay.py  scenario_runner.py  time_manager.py  tool_box.py  tool_utils.py  tools.py  types.py
are/simulation/agents/: README.md  adapters.py  agent_builder.py  agent_config_builder.py  agent_execution_result.py  agent_log.py  are_simulation_agent.py  are_simulation_agent_config.py  decoding_types.py  multimodal.py  user_proxy.py
are/simulation/apps/: README.md  __init__.py  agent_user_interface.py  apartment_listing.py  app.py  cab.py  calendar.py  calendar_v2.py  city.py  contacts.py  email_client.py  messaging.py  messaging_v2.py  reminder.py  sandbox_file_system.py  shopping.py  system.py  virtual_file_system.py
are/simulation/benchmark/: __init__.py  cli.py  gaia2_submission.py  gaia2_upload_script.py  hf_config_utils.py  hf_upload_utils.py  huggingface_loader.py  local_loader.py  report_stats.py  scenario_executor.py  scenario_loader.py
are/simulation/cli/: shared_params.py  utils.py
are/simulation/core/: mdconvert.py  reliability_utils.py
are/simulation/data_handler/: exporter.py  importer.py  models.py
are/simulation/gui/: cli.py
are/simulation/scenarios/: README.md  __init__.py  config.py  demo_interactive_scenarios.json  registration.py  scenario.py  synthetic_scenario_generator.py  validation_result.py
are/simulation/tests/: app_tool_test.py  core_test.py  datetime_test.py  environment_test.py  notification_test.py  prompt_consistency_test.py  reliability_utils_test.py  scheduling_test.py  streaming_utils_test.py  test_gaia2_mini_hf.py  (+11 more)
build_hooks/: build_gui.py
docs/: .gitignore  Makefile  conf.py  index.rst  nitpick-exceptions  quickstart.rst  requirements.txt
docs/_templates/: page.html
docs/api_reference/: agents.rst  apps.rst  are_simulation_mcp_server.rst  cli_reference.rst  environment.rst  events.rst  index.rst  json_format.rst  mcp_app.rst  scenarios.rst  validation.rst
docs/foundations/: apps.rst  events.rst  index.rst  notifications.rst  scenarios.rst  universes.rst
docs/tutorials/: apps_tutorial.rst  index.rst  scenario_development.rst  working_with_scenarios.rst
docs/user_guide/: benchmarking.rst  docker.rst  gaia2_evaluation.rst  installation.rst  llm_configuration.rst  understanding_ui.rst
ios_scenario_outlines/: ACC-COMM-RELATE-001.md  ACC-HOME-0158.md  CA-ME-023.md
(+487 files in other folders)
